Moves CSS, JS, Assets, and index out of Public

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
 <div id='head'></div>
-<script src='/js/christmastree.js'></script>
+<script src='./js/christmastree.js'></script>
 </body>
 </html>
