--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link href="./css/styles.css" rel="stylesheet" media="screen" />
 </head>
 <body>
-<div id='head'></div>
+<div id='head'>MERRY CHRISTMAS!!</div>
 <script src='./js/christmastree.js'></script>
 </body>
 </html>
